// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`libs/Akismet akismetCheckSpam handles errors 1`] = `
{
  "code": "AKISMET_CHECK_SPAM_FAILED",
  "cause": {}
}
`;

exports[`libs/Akismet akismetVerify handles errors 1`] = `
{
  "code": "AKISMET_VERIFICATION_FAILED",
  "cause": {}
}
`;
